# Nobitex-Quant-System

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
analysis/: __init__.py  comparator.py  reporter.py  stats_calculator.py  visualizer.py
backtest/: correctness_checker.py  metrics.py  optimizer.py  walk_forward.py
config/: risk_profiles.json  settings.py
core/: backtest_engine.py  client.py  cost_engine.py  data_manager.py  events.py  exceptions.py  execution_calibrator.py  execution_client.py  execution_profile.py  logger.py  order_manager.py  risk_manager.py
docs/: AI_AGENT_ONBOARDING.md  configuration.md  live_trading.md  testing_guide.md  trust_backtesting.md
docs/api/: nobitex_reference.md
docs/strategy_development/: validation_process.md  writing_strategies.md
live/: __init__.py  live_engine.py  live_trader.py  multi_strategy_runner.py  order_manager.py  paper_trader.py  real_trader.py  risk_manager.py  session_manager.py  websocket_client.py
strategies/base/: __init__.py  context.py  indicators.py  signal.py  strategy_interface.py  validation.py
strategies/builtin/: __init__.py  ma_crossover.py  rsi_strategy.py  strategy_template.py
strategies/user/: AI_CHECKLIST.md  AI_GUIDE.md  InstitutionalAdaptiveWaveTrend.py  MeanReversionPAXGIRTProfitable.py  SimpleBuyAndHold.py  __init__.py  crypto_adaptive_grid.py
tests/: conftest.py  fixtures.py
tests/integration/: test_backtest_engine.py  test_backtest_short_support.py  test_correctness_and_cli.py
tests/property/: test_backtest_properties.py
(+13 files in other folders)
