[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nobitex-quant-system"
version = "0.1.0"
description = "Trustable and reproducible quantitative trading system for Nobitex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "numpy>=1.26",
  "pandas>=2.1",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.98",
  "pytest>=8.0",
  "pytest-cov>=4.1",
]

[project.scripts]
quant = "cli:cli"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "backtest*", "live*", "analysis*", "strategies*", "config*"]
